fix: add wraptidy to tidyhtml

--- a/Bootstrap/floatinglabels.css
+++ b/Bootstrap/floatinglabels.css
@@ -53,3 +53,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+textarea[id="floating-textarea-2"],
+textarea[id="floating-textarea-2-disabled"] {
+  height: 6.25rem;
+}
